# relation-app

./: .env.local.example  .eslintignore  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.js  package.json  pyproject.toml  tsconfig.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
api/: Y10iBobb_follow.csv  cypher_test.py  get_twitter_user.py  hello_neo4j.py  import.py  import_data.py  main.py  neo4j_dump_test.dump  neo4j_web.py  output_follower.csv  pypher_test.py  tweepyのテスト.ipynb  データ入力を検討.ipynb
apollo/: type-defs.js  type-defs.ts
components/: footer.js  header.tsx
docs/.github/pull_re/PULL_REQUEST_TEMPLATE/: quest_template.md
pages/: index.tsx
pages/actor/: [name].tsx
pages/movie/: [title].tsx
src/apollo/: client.ts  resolvers.ts  schema.ts  type-defs.ts
src/components/: footer.tsx  header.tsx
src/components/atoms/: index.ts
src/components/atoms/userIcon/: userIcon.tsx
src/components/auth/: 18887-twitter-notification.json  access-popover.tsx  index.ts
src/components/controllers/: buttons.tsx  index.ts  indicators.tsx  sliders.tsx
src/layout/: footer.tsx  header.tsx  layout.tsx
src/lib/: NoSSRForceGraph.js
src/pages/: _app.tsx  index.tsx  user.tsx
src/pages/__tests__/: index.spec.tsx
src/pages/api/: graphql.ts
src/pages/api/auth/: [...nextauth].ts
src/util/: neo4j.js
test/: index.spec.tsx
topic_model/: topic_model.ipynb  最終辞書.txt
